Issue #7 Aggiunta risorsa login.
